--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						<span>V</span>
 						<h2 class="universal-h2">amsi Krishna</h2>
 					</div>
-					<p>I'm a cretive desiner and developer.</p>
+					<p>I'm a cretive designer and developer.</p>
 				</div>
 			</article>
 			<div class="about-me__text">
